scss/style.scss
@import './mixins';

$text: 'IBM Plex Mono', monospace;
$page_width: 650px;

.sr-only, .assistive-text {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	border: 0;
}
.sr-only-focusable:active,
.sr-only-focusable:focus {
	position: static;
	width: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	clip: auto;
}

body {
	padding: 0 25px;
	overflow-y: scroll;
	font-family: $text;
	line-height: 1.45em;
}

.sheet {
	margin-top: 4em;
}

.container-slim {
	margin: 0 auto;
	margin-top: 100px;
	max-width: 700px;
}

.container-center-center {
	display: flex;
	justify-content: center;
	align-items: center;
	width: calc(100vw - 100px);
	height: 100vh;

	.inner {
		display: inline-block;
	}
}

h1 {
	font-size: 18px;
	margin-bottom: 1.5rem;
	font-weight: bold;
}

p {
	margin-bottom: 1rem;
}

a {
	color: #1d65ff;
}

strong, .strong {
	font-weight: bold;
}

li {
	margin: 0;
	margin-bottom: 0.5em;
}

table {
	width: 100%;
}

tbody tr {
	border-top: 1px solid #ddd;
}

th {
	padding: 0.1em 0.5em;
	font-size: 0.8em;
	font-weight: bold;
}

td {
	padding: 0.25em;
}

section {
	margin: 1em auto;
	padding-bottom: 1em;
	border-bottom: 1px solid #ddd;
	max-width: $page_width;

	&:last-child {
		border-bottom: none;
	}

	> .label {
		margin-bottom: 1em;
	}
}

.row {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	
	&-left {
		justify-content: flex-start;
	}

	&-spaced {
		justify-content: space-around;
	}

	&-vert-centered {
		align-items: center;
	}
}

.label {
	display: block;
	padding: 0.1em 0.5em;
	font-size: 0.8em;
	text-transform: uppercase;
	letter-spacing: 0.1em;

	&-inline {
		display: inline-block;
	}
}

.box {
	border: 1px solid #000;

	&-lite {
		border: none;
		border-top: 1px solid #ddd;

		&:last-child {
			border-right: none;
		}
	}
	
	.row-left & {
		margin-right: 1em;
		
		&:last-child {
			margin-right: 0;
		}
	}
}

.col-2 {
	columns: 2;
}

.sep {
	margin: 0 -0.25em;
}

.field {
	display: inline-block;
	border: none;
	padding: 0.25em;
	width: auto;
	min-width: 0;
	max-width: none;
	font-family: $text;
	font-size: 1em;
	line-height: 1em;
	color: #000;
	background-color: transparent;

	&:hover, &:focus {
		background-color: #f3f3f3;
		color: #1d65ff;
	}

	.reverse & {
		color: #fff;
		background-color: #000;

		&:hover, &:focus {
			background-color: #222;
			color: #6294ff;
		}
	}

	&-focus {
		border: 1px solid #f3f3f3;
	}

	&-visible {
		background-color: #f3f3f3;
	}
}

@include field-sizes();

.field.size-full, .size-full {
	width: 100%;
}

.block {
	display: block;

	&.centered {
		margin-left: auto;
		margin-right: auto;
	}
}

.float-left {
	float: left;
}

.float-right {
	float: right;
}

.clearfix {
	@include clearfix;
}

.vert-after {
	margin-bottom: 1em;
}

.vert-center {
	display: flex;
	align-items: center;
}

.padded {
	padding: 5px 10px;
}

.small {
	font-size: 0.75em;
}

.normal {
	font-size: 1rem;
}

.huge {
	font-size: 1.5em;
}

.muted {
	color: #999;
}

.centered, .text-center {
	text-align: center;
}

.text-left {
	text-align: left;
}

.text-right {
	text-align: right;
}

.strong {
	font-weight: bold;
}

.reverse {
	background: #000;
	color: #fff;
}

.title {
	font-weight: bold;
}

.meta {
	font-style: italic;
}

.ability, .saving-throw {
	width: 65px;
}

.skill-modifier {
	display: inline-block;
	width: 20px;
	text-align: right;
}

.button-primary {
	display: inline-block;
	appearance: none;
	border: 2px solid #000;
	box-sizing: border-box;
	margin: 1em 0;
	padding: 0.5em 0.75em;
	font-family: $text;
	font-size: 14px;
	text-align: center;
	text-decoration: none;
	background-color: #000;
	color: #fff;
	cursor: pointer;

	&:hover, &:focus {
		background-color: #444;
		border-color: #444;
	}
}

.button-secondary {
	@extend .button-primary;
	background-color: transparent;
	color: #000;

	&:hover, &:focus {
		background-color: transparent;
		border-color: #666;
		color: #666;
	}
}

.button-add, .button-delete {
	//display: flex;
	//justify-content: center;
	//align-items: center;
	appearance: none;
	margin-left: 5px;
	padding: 0;
	border-radius: 100px;
	border: 1px solid #999;
	width: 20px;
	height: 20px;
	font-family: $text;
	font-size: 18px;
	line-height: 16px;
	background: transparent;
	color: #999;
	cursor: pointer;

	// icon alignment hack
	[role="presentation"] {
		position: relative;
		top: -1px;
	}
}

.button-add {
	display: inline-block;
	margin: 10px auto;
	text-align: center;

	&:hover, &:focus {
		border-color: #1d65ff;
		color: #1d65ff;
	}
}

.deletable {
	.button-delete {
		opacity: 0;

		&:hover, &:focus {
			border-color: #ff1d30;
			color: #ff1d30;
		}
	}

	&:hover, &:focus {
		.button-delete {
			opacity: 1;
		}
	}
}

.quill-editor {
	font-family: $text;
	background-color: #eee;

	[contenteditable] {
		color: #000;
	}

	a:hover {
		cursor: pointer;
	}
}

.ql-editor {
	overflow: visible;
}

.list-field, .spell-list {
	.quill-editor {
		width: 100%;
	}

	.ql-editor {
		padding: 6px 8px;
	}

	.ql-tooltip {
		z-index: 1;
	}
}

.spell-slots {
	padding: 0 2em;

	&-total {
		font-weight: bold;
	}
}

.sheet-nav {
	display: block;
	position: fixed;
	top: 0;
	left: 50%;
	transform: translateX(-50%);
	margin: 0 auto;
	width: 100%;
	max-width: $page_width;
	text-align: center;
	background-color: #000;
	z-index: 10;

	ul {
		position: relative;
	}

	li {
		display: inline-block;
		margin: 0;
	}

	button {
		unset: all;
		display: inline-block;
		appearance: none;
		border: none;
		padding: 0.5em 0.5em;
		font-family: $text;
		font-size: 1rem;
		background-color: #000;
		color: #fff;
		cursor: pointer;

		&:hover, &:focus {
			color: #6294ff;
		}
	}

	.active button {
		background-color: #1d65ff;

		&:hover, &:focus {
			color: #fff;
		}
	}

	.back-button, .delete-character-button {
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		height: 100%;

		a {
			display: flex;
			align-items: center;
			padding: 0 20px;
			height: 100%;
			font-family: $text;
			font-size: 14px;
			font-weight: bold;
			text-decoration: none;
			color: #fff;

			img {
				display: block;
				position: relative;
				margin-bottom: 0;
				vertical-align: center;
				width: auto;
				height: 20px;
			}

			&:hover, &:focus {
				background-color: #1d65ff;
			}
		}
	}

	.delete-character-button {
		position: absolute;
		right: 0;
		left: auto;
		display: flex;
		align-items: center;
		padding: 0;
		height: 100%;
		width: auto;

		button {
			background: transparent;
		}

		img {
			display: block;
			height: 20px;
			width: auto;
		}

		&:hover, &:focus {
			background: #b31f1f;
		}
	}
}

/* -- Bio --------------------------------------------------- */

.bio {
	label {
		display: inline-block;
		margin-right: -0.5em;
	}
}

/* -- Normal text styles ------------------------------------ */

.content {
	h2 {
		font-weight: bold;
	}

	ul {
		margin-bottom: 1rem;
		padding-left: 2em;
		list-style: disc;
	}

	li {
		margin-bottom: 0.5em;
	}
}


/* -- Images & Icons ---------------------------------------- */

.mini-icon {
	width: 1em;
	height: 1em;

	svg {
		display: block;
		max-width: 100%;
		max-height: 100%;
		fill: #000;
	}
}


/* -- Dashboard --------------------------------------------- */

.sheet-list {
	margin-bottom: 2em;
	padding-left: 0;
	
	li {
		margin: 0;
		padding: 0.5em 0;
		border-bottom: 1px solid rgba(#000, 0.2);
	}
	
	p {
		margin: 0;
	}
}

.account-actions {
	position: absolute;
	top: 20px;
	right: 20px;
}

.support-me {
	margin-top: 200px;
	text-align: center;
}

.announcement {
	margin: 0 auto;
	margin-top: 2em;
	margin-bottom: -3em;
	padding: 0.75em 1em;
	max-width: 700px;
	background-color: whitesmoke;

	> * {
		margin: 0;
	}

	> * + * {
		margin-top: 1em;
	}
}


/* -- Dark Mode --------------------------------------------- */

/* html.dark-mode {
	background-color: #000;
	filter: invert(100%) brightness(75%);
} */

html.dark-mode {
	background-color: #1a1a1a;
	color: #ccc;

	a {
		color: #6294ff;

		&:visited {
			color: #6294ff;
		}
	}

	.button-primary {
		border-color: #ccc;
		background-color: #ccc;
		color: #1a1a1a;

		&:visited {
			color: #1a1a1a;
		}

		&:hover, &:focus {
			background-color: #eee;
		}
	}

	.button-secondary {
		background-color: transparent;
		color: #ccc;

		&:visited {
			color: #ccc;
		}

		&:hover, &:focus {
			border-color: #fff;
			background-color: transparent;
			color: #fff;
		}
	}

	.reverse {
		background-color: #ccc;
		color: #1a1a1a;

		.field {
			background-color: #ccc;
			color: #1a1a1a;

			&:hover, &:focus {
				background-color: #eee;
				color: #1d65ff;
			}
		}
	}

	.box {
		border-color: #ccc
	}

	.field {
		color: #ccc;

		&-visible {
			background-color: #333;
			color: #ccc;
		}

		&:hover, &:focus {
			background-color: #333;
		}
	}

	.sheet-nav {
		border-bottom: 1px solid #ccc;
		background-color: #1a1a1a;

		button {
			background-color: #1a1a1a;
			color: #ccc;

			&:hover, &:focus {
				color: #6294ff;
			}
		}

		.active button {
			background-color: #1d65ff;
			color: #fff;

			&:hover, &:focus {
				color: #fff;
			}
		}
	}

	.quill-editor {
		background-color: #222;
		color: #ccc;

		[contenteditable] {
			color: #ccc;
		}

		a {
			color: #6294ff;
		}
	}

	.mini-icon svg {
		fill: #ccc;
	}
	
	.sheet-list li {
		border-bottom-color: rgba(#fff, 0.2);
	}
}

